# dpi

./: README.md  consumption.md  paper.md  plan.md  pyproject.toml  report.md  slides.md
dpi/: __init__.py
dpi/algorithms/: __init__.py  dpi.py  policy_eval.py  policy_improve.py
dpi/core/: __init__.py  hjb.py  ito.py  sampler.py
dpi/models/: __init__.py  base.py  consumption_smoothing.py  health_management.py  kuramoto.py  two_trees.py
dpi/networks/: __init__.py  angle_embedding.py  policy_network.py  value_network.py
dpi/utils/: __init__.py  training.py
scripts/: consumption_experiment.py  health_experiment.py  health_rule_cost.py  kuramoto_experiment.py  smoke_train.py
tests/: __init__.py  test_consumption_limits.py  test_consumption_model.py  test_dpi_steps.py  test_hjb.py  test_ito.py  test_kuramoto_model.py
