[project]
name = "dpi"
version = "0.1.0"
description = "Deep Policy Iteration (DPI) reference implementation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0",
  "numpy",
  "scipy",
  "matplotlib",
  "tqdm",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
